--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,26 @@
+.idea
+/*.php
+wp-admin
+wp-includes
+*.zip
+.htaccess
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 *.log
+bs-config.js
+*.dat
+*.bk
+/license.txt
+/readme.html
+/sitemap.xml
+/sitemap.xml.gz
+
+
 wp-config.php
 wp-content/advanced-cache.php
 wp-content/backup-db/
@@ -11,9 +33,10 @@ wp-content/mu-plugins/
 wp-content/wp-cache-config.php
 wp-content/plugins/hello.php
 
-/.htaccess
-/license.txt
-/readme.html
-/sitemap.xml
-/sitemap.xml.gz
 
+!wp-content/uploads
+wp-content/index.php
+wp-content/plugins/*
+!wp-content/plugins/plugaddons
+
+wp-content/themes/*
